# ez

./: Cargo.toml  README.md  env.sh
compiler/: Cargo.toml
compiler/src/: lexer.rs  main.rs  parser.rs
examples/: basic.ez
